maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:3: error: ';' expected but '(' found.
  var posBaggle : Array[Int](2)
                            ^